--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main>
         <p class="intro-text">This is a paragraph of text styled with CSS.</p>
-        <p> New Paragraph Which Is Another paragraph without specific styling.</p>
+        <p>Another paragraph without specific styling.</p>
     </main>
 
     <footer>
