--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <main>
         <p class="intro-text">This is a paragraph of text styled with CSS.</p>
+
         <p>Second Attempt After Reverting, Another paragraph without specific styling.</p>
+        <p>Final COmmit, Another paragraph without specific styling.</p>
     </main>
 
     <footer>
