--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="intro-text">This is a paragraph of text styled with CSS.</p>
 
         <p>Second Attempt After Reverting, Another paragraph without specific styling.</p>
-        <p>All together final commit, Another paragraph without specific styling.</p>
+        <p>Testing automation All together final commit, Another paragraph without specific styling.</p>
     </main>
 
     <footer>
